--- a/Tracking Vaksin/Views/Shared/_Layout.cshtml
+++ b/Tracking Vaksin/Views/Shared/_Layout.cshtml
@@ -1,4 +1,8 @@
-﻿<!DOCTYPE html>
+﻿@using Tracking_Vaksin.Controllers
+@using Microsoft.AspNetCore.Http
+@inject IHttpContextAccessor HttpContextAccessor
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -24,6 +28,13 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                        </li>
+                        <li class="nav-item">
+                            @if (HttpContextAccessor.HttpContext.Session.GetString("_Username") != "" || HttpContextAccessor.HttpContext.Session.GetString("_Username") != null)
+                            {
+                                var controller = HttpContextAccessor.HttpContext.Session.GetString("_Role");
+                                @Html.ActionLink("Logout", "Logout", "Bpom", null, new { @class="nav-link text-dark" });
+                            }
                         </li>
                     </ul>
                 </div>
