--- a/Tracking Vaksin/wwwroot/css/site.css
+++ b/Tracking Vaksin/wwwroot/css/site.css
@@ -10,9 +10,12 @@ html {
 
 html {
   position: relative;
+  height:100%;
   min-height: 100%;
 }
 
 body {
-  margin-bottom: 60px;
+    margin-bottom: 60px;
+    height: 0%;
+    min-height: 100vh;
 }
