--- a/Tracking Vaksin/Views/Bpom/Index.cshtml
+++ b/Tracking Vaksin/Views/Bpom/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿@using Microsoft.AspNetCore.Http
 @inject IHttpContextAccessor HttpContextAccessor
+@model List<ServiceModelDataVaksin.DataVaksinS>
 
 @{
      ViewData["Title"] = "Home Page BPOM";
@@ -10,7 +11,37 @@
 }
 @if(username != "")
 {
-    <h3>Selamat Datang, @username!</h3>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+                <h3 align="center">Selamat Datang di Sistem Data BPOM, @username!</h3>
+                <div></div>
+                <h4>Daftar Vaksin yang Sudah Diregistrasi</h4>
+                <table  class="table">
+                    <thead>
+                    <tr>
+                        <th scope="col">ID Produsen</th>
+                        <th scope="col">Nomor Registrasi</th>
+                        <th scope="col">Nama Vaksin</th>
+                        <th scope="col">Jumlah</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    @foreach (var item in Model)
+                    {
+                        <tr>
+                        <td>@item.id_produsen</td>
+                        <td>@item.no_registrasi</td>
+                        <td>@item.nama</td>
+                        <td>@item.jumlah</td>
+                        </tr>
+                    }
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
 }
 else
 {
