--- a/Tracking Vaksin/Views/Masyarakat/Login.cshtml
+++ b/Tracking Vaksin/Views/Masyarakat/Login.cshtml
@@ -1,13 +1,13 @@
-﻿@model Tracking_Vaksin_Services.BPOM
+﻿@model Tracking_Vaksin_Services.Masyarakat
 
 @*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
-     ViewData["Title"] = "Login Page BPOM";
+     ViewData["Title"] = "Login Page Produsen";
 }
 
-<h3>Login BPOM</h3>
+<h3>Login Masyarakat</h3>
 @if (ViewBag.Message != null)
     {
         <div class="alert alert-danger">
@@ -30,5 +30,7 @@
                 <input type="submit" value="Login" class="btn btn-primary mt-2 mb-2" />
             </div>
         </form>
+        <span>Belum punya akun?</span> @*<a href="@Url.Action("Register", "Produsen")">Register</a>*@ 
+        <a asp-action="Register">Register</a>
     </div>
 </div>
