--- a/Tracking Vaksin/Views/Masyarakat/Register.cshtml
+++ b/Tracking Vaksin/Views/Masyarakat/Register.cshtml
@@ -1,33 +1,28 @@
-﻿@model Tracking_Vaksin_Services.BPOM
+﻿@model Tracking_Vaksin_Services.Masyarakat
 
-@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
 @{
-     ViewData["Title"] = "Login Page BPOM";
+     ViewData["Title"] = "Register Page Masyarakat";
 }
 
-<h3>Login BPOM</h3>
-@if (ViewBag.Message != null)
-    {
-        <div class="alert alert-danger">
-            @ViewBag.Message
-        </div>
-        ViewBag.Message = null;
-    }
+<h3>Registrasi Produsen</h3>
+
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Login">
+        <form asp-action="Register">
             <div class="form-group mb-2">
                 <label asp-for="username" class="control-label">Username</label>
                 <input asp-for="username" class="form-control" />
+            </div>
+            <div class="form-group mb-2">
+                <label name="nik" class="control-label">NIK</label>
+                <input name="nik" class="form-control"/>
             </div>
             <div class="form-group mb-2">
                 <label asp-for="password" class="control-label">Password</label>
                 <input asp-for="password" class="form-control" type="password"/>
             </div>
             <div class="form-group">
-                <input type="submit" value="Login" class="btn btn-primary mt-2 mb-2" />
+                <input type="submit" value="Register" class="btn btn-primary mt-2 mb-2" />
             </div>
         </form>
     </div>
