--- a/Tracking Vaksin/Views/Rumahsakit/PemakaianVaksin.cshtml
+++ b/Tracking Vaksin/Views/Rumahsakit/PemakaianVaksin.cshtml
@@ -1,4 +1,6 @@
-﻿@model ServiceBPOM.DataPasien
+﻿@using Microsoft.AspNetCore.Http
+@inject IHttpContextAccessor HttpContextAccessor
+@model List<ServiceModelDataVaksin.DataVaksinS>
 
 @*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
@@ -9,6 +11,7 @@
 
 <h3>Pemakaian Vaksin</h3>
 @{
+    int id = HttpContextAccessor.HttpContext.Session.GetInt32("_Id") ?? -1;
     if (ViewBag.Message != null)
     {
         <div class="alert alert-danger">
@@ -21,15 +24,20 @@
     <div class="col-md-4">
         <form asp-action="PemakaianVaksin">
             <div class="form-group mb-2">
-                <label asp-for="nik" class="control-label">Nomor Induk Kependudukan</label>
-                <input asp-for="nik" class="form-control" required/>
+                <label id="nik" class="control-label">Nomor Induk Kependudukan</label>
+                <input name="nik" class="form-control" required/>
             </div>
             <div class="form-group mb-2">
-                <label asp-for="id_vaksin" class="control-label">Jenis Vaksin</label>
-                <select asp-for="id_vaksin" class="form-select" aria-label="Default select example" required>
+                <label id="id" class="control-label">Jenis Vaksin</label>
+                <select name="id" class="form-select" aria-label="Default select example" required>
                     <option selected value="" disabled>Pilih Jenis Vaksin</option>
-                    <option value="1">vaksin 1</option>
-                    <option value="2">vaksin 2</option>
+                    @foreach(ServiceModelDataVaksin.DataVaksinS vaksin in Model)
+                    {
+                        @if(vaksin.id_rumahsakit_penerima == id)
+                        {
+                            <option value="@vaksin.id">@vaksin.nama</option>
+                        } 
+                    }
                 </select>
             </div>
             <div class="form-group">
