Fixes on things

--- a/Tracking Vaksin/Views/Masyarakat/Register.cshtml
+++ b/Tracking Vaksin/Views/Masyarakat/Register.cshtml
@@ -4,7 +4,7 @@
      ViewData["Title"] = "Register Page Masyarakat";
 }
 
-<h3>Registrasi Produsen</h3>
+<h3>Registrasi Masyarakat</h3>
 
 @{
     if (ViewBag.Message != null)
