--- a/Tracking Vaksin/Views/Rumahsakit/PemakaianVaksin.cshtml
+++ b/Tracking Vaksin/Views/Rumahsakit/PemakaianVaksin.cshtml
@@ -29,7 +29,7 @@
             </div>
             <div class="form-group mb-2">
                 <label id="id" class="control-label">Jenis Vaksin</label>
-                <select name="id" class="form-select" aria-label="Default select example" required>
+                <select name="id" class="form-control form-select" aria-label="Default select example" required>
                     <option selected value="" disabled>Pilih Jenis Vaksin</option>
                     @foreach(ServiceModelDataVaksin.DataVaksinS vaksin in Model)
                     {
