--- a/Tracking Vaksin/Views/Masyarakat/Login.cshtml
+++ b/Tracking Vaksin/Views/Masyarakat/Login.cshtml
@@ -4,7 +4,7 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
-     ViewData["Title"] = "Login Page Produsen";
+     ViewData["Title"] = "Login Page Masyarakat";
 }
 
 <h3>Login Masyarakat</h3>
