--- a/Tracking Vaksin/Views/Rumahsakit/Login.cshtml
+++ b/Tracking Vaksin/Views/Rumahsakit/Login.cshtml
@@ -8,7 +8,14 @@
 }
 
 <h3>Login Rumah Sakit</h3>
-
+@if (ViewBag.Message != null)
+    {
+        <div class="alert alert-danger">
+            @ViewBag.Message
+        </div>
+        ViewBag.Message = null;
+    }
+    
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Login">
