Fixes on buttons and information

--- a/Tracking Vaksin/Views/Bpom/Index.cshtml
+++ b/Tracking Vaksin/Views/Bpom/Index.cshtml
@@ -28,6 +28,8 @@
                             <th scope="col">ID Produsen</th>
                             <th scope="col">Nomor Registrasi</th>
                             <th scope="col">Nama Vaksin</th>
+                            <th scope="col">Tanggal Produksi</th>
+                            <th scope="col">Tanggal Terima</th>
                             <th scope="col">Jumlah</th>
                         </tr>
                     </thead>
@@ -41,6 +43,8 @@
                                 <td>@item.id_produsen</td>
                                 <td>@item.no_registrasi</td>
                                 <td>@item.nama</td>
+                                <td>@item.tgl_pembuatan</td>
+                                <td>@item.tgl_terima</td>
                                 <td>@item.jumlah</td>
                                 </tr>
                                 i++;
