--- a/Tracking Vaksin/Views/Produsen/Index.cshtml
+++ b/Tracking Vaksin/Views/Produsen/Index.cshtml
@@ -20,7 +20,11 @@ else
     <span>Anda dapat mengelola data vaksin yang Anda produksi di halaman ini</span>
     <br/>
 
-    <a asp-action="RegistrasiVaksin">Registrasi Vaksin</a>
+    <div class="row mt-3">
+        <div class="col-12" align="left">
+            <a asp-action="RegistrasiVaksin" class="btn btn-primary">Registrasi Vaksin</a>
+        </div>
+    </div>
 
     <br/>
     <table class="table table-striped">
