--- a/Tracking Vaksin/Views/Pemerintah/CreatePenduduk.cshtml
+++ b/Tracking Vaksin/Views/Pemerintah/CreatePenduduk.cshtml
@@ -33,7 +33,7 @@
                 <input asp-for="alamat" class="form-control required/>
             </div>
             <div class="form-group mb-2">
-                <label asp-for="jenis_kelamin" class="control-label">Jumlah Produksi</label>
+                <label asp-for="jenis_kelamin" class="control-label">Jenis Kelamin</label>
                 <select asp-for="jenis_kelamin" class="form-control form-select">
                     <option selected disabled>- Pilih -</option>
                     <option value="Pria">Pria</option>
